# master_control

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
agents/examples/: counter_script.py  hello_agent.py  ticker_service.py
configs/examples/: counter_script.yaml
docs/: api-reference.md  architecture.md  configuration.md  future-work.md  operations.md  usage.md
scripts/: build-image.sh  deploy-clients.sh  install.sh  mctl-client.sh  mctl-daemon.sh  setup-control-host.sh
scripts/lib/: common.sh  inventory.sh  inventory_helper.py  mctl-first-boot.service  mctl-first-boot.sh  remote-bootstrap.sh
simulation/: Dockerfile  docker-compose.sim.yaml
simulation/configs/central/: daemon.yaml
simulation/configs/client/: daemon.yaml  hello_agent.yaml
src/master_control/: __init__.py  logging_config.py
src/master_control/api/: __init__.py  central_app.py  central_routes.py  client_app.py  models.py  (+3 more)
tests/fixtures/: invalid_missing_name.yaml  invalid_missing_schedule.yaml  templated_agent.yaml  valid_agent.yaml  valid_multi.yaml  valid_service.yaml
tests/integration/: test_orchestrator.py
tests/unit/: test_cli.py  test_config_loader.py  test_connection.py  test_debug.py  test_deploy_scripts.py  test_deployer.py  test_discovery.py  test_fleet_models.py  test_fleet_store.py  test_health.py  test_heartbeat.py  test_ipc.py  test_logging_config.py  test_models.py  test_modes.py  test_plugins.py  test_registry.py  test_repository.py  test_rlimits.py  test_runner.py  test_scheduler.py  test_schema.py  test_scripts.py  test_simulation.py  test_templating.py
(+43 files in other folders)
